@@ -3,6 +3,9 @@ N.N.N  - DD-MMM-2015
 - Added the option 'cmd' in 'libvirt.pm' in order to be able to execute a
   custom command like 'virsh -r -c qemu:///session'.
   	(suggested by Pavel Bauer, pbauer AT algotech.cz)
+- Added in 'libvirt.pm' the ability to support multiple disks and network
+  interfaces for each virtual machine.
+  	(suggested by Pavel Bauer, pbauer AT algotech.cz)
 - Fixed in 'libvirt.pm' limiting to 100 all CPU values greater than 100.
 - Fixed in 'libvirt.pm' to hide empty groups.
   	(thanks to Pavel Bauer, pbauer AT algotech.cz for pointing this out)
